Fix issue with misaligned underline

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -20,6 +20,7 @@
   .link,
   p a {
     color: $-c-blue-500;
+    display: inline-block;
     font-weight: $-f-bold;
     position: relative;
     text-decoration: none;
